--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 [Bb]uilds/
 [Ll]ogs/
 Assets/AssetStoreTools*
+Assets/Mixamo Lava Character/Animator Controller.controller
 
 # Visual Studio cache directory
 .vs/
